# rust_recursive_action

./: Cargo.toml  README.md  i18n.toml
i18n/fluent/en-US/: lang.ftl
i18n/fluent/zh_CN/: lang.ftl
i18n/fluent/zh_TW/: lang.ftl
i18n/mo/zh/: rust_recursive_clean.mo
i18n/po/zh/: rust_recursive_clean.po
i18n/pot/: rust_recursive_clean.pot
i18n/pot/src/: main.pot
locales/: TODO.yml
src/: errors.rs  language_helpers.rs  main.rs
