[package]
name = "rust_recursively_action"
version = "0.1.1"
edition = "2024"
authors = ["Alskkjj wyhwow1995@gmail.com"]
license = "GPL-3.0"
description = "A tool to clean/update the cargo projects, recursively from root directory to leaf, and avoid directories: `src`, `\\.*`, `target`"
readme = "README.md"
homepage = "https://github.com/alskkjj/rust_recursive_action"
repository = "https://github.com/alskkjj/rust_recursive_action"
keywords = ["clean", "cargo", "update"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.26", features = ["cargo", "derive"] }
fluent = "0.16.1"
intl-memoizer = "0.5.2"
snafu = { version = "0.9.0", features = ["backtrace"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
sys-locale = "0.3.2"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
